grammar.js
    source_file: ($) => repeat($._element),

    _element: ($) =>
      choice(
        $.package_declaration,
        $.namespace_declaration,
        $._declaration,
        $.feature_usage,
        $.import_statement,
        $.alias_declaration,
        $.comment_element,
        $.doc_comment,
        $.satisfy_statement,
        $.filter_statement,
        $.metadata_annotation,
        $.assignment_statement,
        $.textual_representation,
        $.connect_statement,
        $.assert_statement,
        $.expression_statement,
        $.multiplicity_definition,
        $._statement,
      ),

    // =================================================================
    // Declaration wrapper — the key optimization.
    // ONE rule handles the modifier prefix, then dispatches to the
    // specific definition or usage type based on the keyword.
    // =================================================================

    comment_element: ($) =>
      choice(
        seq(
          "comment",
          optional(field("name", $.identifier)),
          optional(seq("about", commaSep1($.qualified_name))),
          optional(seq("locale", $.string_literal)),
          $.block_comment,
        ),
        seq(
          "locale", $.string_literal,
          $.block_comment,
        ),
      ),

    doc_comment: ($) =>
      seq("doc",
          optional($.short_name),
          optional(field("name", $.identifier)),
          optional(seq("locale", $.string_literal)),
          $.block_comment),

    // --- Textual Representation ---

    state_definition: ($) =>
      seq(
        "state", "def",
        optional($.short_name),
        optional(field("name", $.identifier)),
        optional($._type_relationships),
        choice($.state_body, ";"),
      ),

    definition: ($) =>
      seq(
        $._def_keyword,
        "def",
        optional($.short_name),
        optional(field("name", $.identifier)),
        optional($._type_relationships),
        choice($.definition_body, ";"),
      ),

    _def_keyword: ($) =>
      choice(
        "part", "action", "port", "attribute", "item",
        "requirement", "constraint", "view", "viewpoint", "rendering",
        "concern", "allocation", "interface", "occurrence", "metadata",
        "calc", "case", "class", "struct", "behavior", "datatype",
        "feature", "function", "predicate", "connector", "interaction",
        "type", "namespace", "classifier", "metaclass", "expr", "step",
        seq("flow", optional("connection")),
        seq(optional("flow"), "connection"),
        seq("use", "case"),
        seq("analysis", optional("case")),
        seq("verification", optional("case")),
        "individual",
        seq("assoc", optional("struct")),
      ),

    enumeration_definition: ($) =>
      prec(1, seq(
        choice("enum", "enumeration"), "def",
        optional($.short_name),
        optional(field("name", $.identifier)),
        optional($._type_relationships),
        choice($.enumeration_body, ";"),
      )),

    definition_body: ($) =>
      seq("{", repeat($._body_element), optional($.result_expression), "}"),

    enumeration_body: ($) =>
      seq("{", repeat(choice($.enum_member, $._body_element)), "}"),

    enum_member: ($) =>
      prec(1, seq(
        optional("enum"),
        optional(field("name", $.identifier)),
        optional($._type_relationships),
        optional($.value_assignment),
        choice(";", $._body),
      )),

    // =================================================================
    // Usages — no prefix (provided by _declaration wrapper)
    // =================================================================

    usage: ($) =>
      seq(
        $._usage_keyword,
        optional($.short_name),
        optional(field("name", $.identifier)),
        optional($.multiplicity),
        optional($._type_relationships),
        optional($.multiplicity),
        repeat($._feature_qualifier),
        optional($._type_relationships),
        optional($.value_assignment),
        optional($.metadata_annotation_list),
        choice($._body, ";"),
      ),

    _usage_keyword: ($) =>
      choice(
        "part", "attribute", "port", "item", "occurrence",
        "calc", "view", "viewpoint", "rendering", "concern",
        "analysis", "verification", "enum",
        "message", "case",
        "classifier", "metaclass", "expr", "step",
        seq("use", "case"),
        seq("snapshot", optional(choice("item", "part"))),
        seq("timeslice", optional(choice("item", "part"))),
      ),

    connection_usage: ($) =>
      seq(
        optional("flow"),
        "connection",
        optional(field("name", $.identifier)),
        optional($._type_relationships),
        optional($.multiplicity),
        optional($._type_relationships),
        optional($.connect_clause),
        choice($._body, ";"),
      ),

    constraint_usage: ($) =>
      seq(
        optional(choice("require", "assert", "assume")),
        repeat($._prefix_metadata),
        "constraint",
        optional(field("name", $.identifier)),
        optional($._type_relationships),
        optional($.multiplicity),
        optional($._type_relationships),
        choice($.constraint_body, ";"),
      ),

    feature_usage: ($) =>
      choice(
        // With at least one modifier or metadata prefix
        seq(
          repeat1(choice($._prefix_metadata, $._modifier)),
          optional(field("name", $.identifier)),
          optional($._type_relationships),
          optional($.multiplicity),
          repeat($._feature_qualifier),
          optional($._type_relationships),
          optional($.value_assignment),
          choice($._body, ";"),
        ),
        // Without prefix: name and type are required
        seq(
          field("name", $.identifier),
          $._type_relationships,
          optional($.multiplicity),
          repeat($._feature_qualifier),
          optional($._type_relationships),
          optional($.value_assignment),
          choice($._body, ";"),
        ),
      ),

    // --- Connection-related usages ---

    succession_statement: ($) =>
      choice(
        seq("first", $._feature_ref,
            optional(seq("if", $._expression)),
            "then", $._feature_ref, ";"),
        seq("first", $._feature_ref, ";"),
        seq("succession", optional(field("name", $.identifier)),
            optional($._type_relationships),
            optional(choice(
              seq("first", $._feature_ref,
                  optional(seq("if", $._expression)),
                  "then", $._feature_ref),
              seq($._feature_ref, "then", $._feature_ref),
            )),
            choice($._body, ";")),
      ),

    perform_statement: ($) =>
      seq(
        "perform",
        optional("action"),
        optional($._feature_ref),
        optional($.multiplicity),
        optional($._type_relationships),
        choice($._body, ";"),
      ),

    exhibit_statement: ($) =>
      seq(
        "exhibit",
        optional("state"),
        $._feature_ref,
        optional(seq("redefines", $._feature_ref)),
        optional("parallel"),
        choice($.state_body, ";"),
      ),

    include_statement: ($) =>
      seq(
        "include",
        optional(repeat1(choice("use", "case", "action", "state"))),
        $._feature_ref,
        optional($._type_relationships),
        optional($.multiplicity),
        choice($._body, ";"),
      ),

    transition_statement: ($) =>
      seq(
        "transition",
        optional(field("name", $.identifier)),
        optional(seq("first", $._feature_ref)),
        optional($.accept_clause),
        optional(seq("if", $._expression)),
        optional(seq("do", choice(
          seq("send", $._expression, choice("to", "via"), $._feature_ref),
          seq("action", $._feature_ref, optional($._type_relationships)),
          $._feature_ref,
        ))),
        seq("then", $._feature_ref),
        ";",
      ),

    accept_clause: ($) =>
      seq(
        "accept",
        choice(
          seq("when", $._expression),
          seq("at", $._expression),
          seq("after", $._expression),
          seq(
            $._feature_ref,
            optional($._type_relationships),
            optional(seq("after", $._expression)),
            optional(seq("via", $._feature_ref)),
          ),
        ),
      ),

    send_action: ($) =>
      seq("send", optional($._expression),
          optional(seq("via", $._feature_ref)),
          optional(seq("to", $._feature_ref)),
          ";"),

    if_action: ($) =>
      choice(
        seq("if", $._expression,
            "then", $._feature_ref,
            optional(seq("else", choice($._feature_ref, $.if_action))),
            ";"),
        seq("if", $._expression, $._body,
            optional(seq("else", choice($._body, $.if_action)))),
      ),

    while_action: ($) =>
      choice(
        seq("while", $._expression, "do", $._feature_ref, ";"),
        seq("while", $._expression, $._body, optional(seq("until", $._expression, ";"))),
      ),

    for_action: ($) =>
      choice(
        seq("for", $.identifier, optional(seq(":", $._feature_ref)), "in", $._expression,
            "do", $._feature_ref, ";"),
        seq("for", $.identifier, optional(seq(":", $._feature_ref)), "in", $._expression,
            $._body),
      ),

    assign_action: ($) =>
      seq(
        "assign", $._feature_ref,
        ":=", $._expression,
        choice($._body, ";"),
      ),

    _body: ($) => $.definition_body,

    state_body: ($) =>
      seq(
        "{",
        repeat(choice(
          $._body_element,
          $.entry_action,
          $.do_action,
          $.exit_action,
        )),
        "}",
      ),

    constraint_body: ($) =>
      seq("{", repeat(choice($._body_element, $._expression)), "}"),

    // --- Body elements ---

    _body_element: ($) =>
      choice(
        $.package_declaration,
        $._declaration,
        $.feature_usage,
        $.import_statement,
        $.alias_declaration,
        $.comment_element,
        $.doc_comment,
        $.satisfy_statement,
        $.assert_statement,
        $.subject_declaration,
        $.actor_declaration,
        $.objective_declaration,
        $.filter_statement,
        $.metadata_annotation,
        $.bind_statement,
        $.verify_statement,
        $.connect_statement,
        $.interface_statement,
        $.allocate_statement,
        $.message_statement,
        $.flow_statement,
        $.dependency_statement,
        $.redefinition_statement,
        $.standalone_redefines,
        $.require_statement,
        $.return_statement,
        $.render_statement,
        $.expose_statement,
        $.stakeholder_declaration,
        $.frame_statement,
        $.expression_statement,
        $.assignment_statement,
        $.terminate_statement,
        $.inline_transition,
        $.textual_representation,
        $.multiplicity_definition,
        // State-related actions can appear in definition bodies too
        $.entry_action,
        $.do_action,
        $.exit_action,
        // Standalone member feature (e.g. `member feature 'public' : VisibilityKind;`)
        $.member_feature,
        // Bind statement (e.g. `bind start = done;`)
        $.bind_statement,
      ),

    expression_statement: ($) =>
      seq($._expression, ";"),

    // --- Type relationships ---

    _type_relationships: ($) =>
      repeat1($._type_relationship),

    redefinition: ($) =>
      seq(token.immediate(prec(2, ">>")), commaSep1(field("target", $._feature_ref))),

    specialization: ($) =>
      seq(token.immediate(prec(1, ">")), commaSep1(field("target", $._feature_ref))),

    typed_by: ($) =>
      seq(optional("~"), commaSep1(field("type", $.qualified_name))),

    // Keyword-based type relationships — unified
    _feature_qualifier: ($) =>
      choice("nonunique", "ordered"),

    value_assignment: ($) =>
      choice(
        seq(choice("=", ":=", seq("default", choice("=", ":="))), $._expression),
        seq("default", $._expression),
        seq("default", $._body),
      ),

    connect_clause: ($) =>
      choice(
        seq("connect", optional($.multiplicity),
            $._feature_ref, optional($._type_relationships), "to",
            optional($.multiplicity), $._feature_ref, optional($._type_relationships)),
        seq("connect", "(", commaSep1(choice(
          seq($.identifier, token(seq("::", ">")), $._feature_ref),
          $._feature_ref,
        )), ")"),
      ),

    // --- Short name ---

    _prefix_metadata: ($) =>
      $.hash_tag,

    visibility: ($) => choice("public", "private", "protected"),

    // --- Modifiers ---

    _modifier: ($) =>
      choice(
        $.visibility,
        "abstract",
        "variation",
        "variant",
        "individual",
        "readonly",
        "derived",
        "nonunique",
        "ordered",
        "in",
        "out",
        "inout",
        "composite",
        "conjugate",
        "const",
        "constant",
        "disjoint",
        "portion",
        "var",
        "ref",
      ),

    // --- Feature reference ---

    _feature_ref: ($) =>
      choice(
        $.qualified_name,
        $.feature_chain,
      ),

    // --- Expressions ---

    _expression: ($) =>
      choice(
        $.identifier,
        $.qualified_name,
        $.feature_chain,
        $.number_literal,
        $.string_literal,
        $.boolean_literal,
        $.null_literal,
        $.binary_expression,
        $.unary_expression,
        $.paren_expression,
        $.bracket_expression,
        $.index_expression,
        $.invocation_expression,
        $.new_expression,
        $.meta_expression,
        $.conditional_expression,
        $.select_expression,
        $.metadata_access_expression,
      ),

    binary_expression: ($) =>
      choice(
        // null coalescing
        prec.right(0, seq($._expression, "??", $._expression)),
        // implies — lowest precedence, right-associative
        prec.right(1, seq($._expression, "implies", $._expression)),
        // or, xor
        prec.left(2, seq($._expression, choice("or", "|", "xor", "^"), $._expression)),
        // and
        prec.left(3, seq($._expression, choice("and", "&"), $._expression)),
        // equality
        prec.left(4, seq($._expression, choice("==", "!=", "===", "!=="), $._expression)),
        // comparison
        prec.left(5, seq($._expression, choice("<", ">", "<=", ">="), $._expression)),
        // additive
        prec.left(6, seq($._expression, choice("+", "-"), $._expression)),
        // multiplicative
        prec.left(7, seq($._expression, choice("*", "/", "%"), $._expression)),
        // exponentiation — right-associative
        prec.right(8, seq($._expression, "**", $._expression)),
        // type operators
        prec.left(9, seq($._expression, choice("hastype", "istype", "as"), $._expression)),
        // collect/select arrow with body
        prec.left(10, seq($._expression, "->", $.identifier, "{", repeat(choice($._body_element, $._expression)), "}")),
        // collect/select arrow with invocation
        prec.left(10, seq($._expression, "->", $.identifier, "(", commaSep($._argument), ")")),
        // collect/select arrow with quoted name
        prec.left(10, seq($._expression, "->", $.identifier, $.quoted_identifier)),
        // collect/select arrow with function reference (e.g. ->reduce RealFunctions::'+')
        prec.left(10, seq($._expression, "->", $.identifier, $._feature_ref)),
        // collect/select arrow (plain)
        prec.left(10, seq($._expression, "->", $._expression)),
        // member access — highest
        prec.left(11, seq($._expression, choice(".", "::"), $._expression)),
      ),

    bracket_expression: ($) =>
      prec.left(1, seq($._expression, "[", $._expression, "]")),

    _word: ($) => /[A-Za-z_][A-Za-z0-9_]*/,
